--- a/app/views/rails_admin/main/_form_nested_many.html.haml
+++ b/app/views/rails_admin/main/_form_nested_many.html.haml
@@ -1,6 +1,20 @@
-= form.fields_for field.name do |nested_form|
-  %blockquote
-    = nested_form.link_to_remove t('admin.misc.remove'), :class => 'label label-info'
-    = nested_form.generate({:action => :create, :model_config => field.associated_model_config, :nested_in => field.name })
-    %hr
-= form.link_to_add t('admin.misc.add_new'), field.name, :class => 'label label-info'
+.controls
+  = form.link_to_add '<i class="icon-plus icon-white"></i>'.html_safe, field.name, { :class => 'btn btn-info' }
+  = form.errors_for(field)
+  = form.help_for(field)
+  %ul.nav.nav-pills{:style => 'margin-top:5px'}
+  
+.tab-content
+  = form.fields_for field.name do |nested_form|
+    = nested_form.link_to_remove '<span class="btn btn-small btn-danger"><i class="icon-trash icon-white"></i></span>'.html_safe
+    = nested_form.generate({:action => :nested, :model_config => field.associated_model_config, :nested_in => field.name })
+
+= form.javascript_for(field) do
+  :plain
+    $("#{form.jquery_namespace(field)}>.tab-content>.fields").addClass('tab-pane').each(function(){
+      $("#{form.jquery_namespace(field)}>.controls>.nav").append('<li><a data-toggle="tab" href="#' + this.id + '">' + $(this).children('.objects_infos').data('object-label') + '</a></li>');
+    });
+    $("#{form.jquery_namespace(field)}>.controls>.nav>li>a[data-toggle]:first").tab('show');
+    if($("#{form.jquery_namespace(field)}>.controls>.nav").children().length == 0) {
+      $("#{form.jquery_namespace(field)}>.controls>.nav").hide()
+    }
