add some icons and wording for creation/edition of related models [ci skip]

--- a/app/views/rails_admin/main/_form_nested_many.html.haml
+++ b/app/views/rails_admin/main/_form_nested_many.html.haml
@@ -1,5 +1,5 @@
 .controls
-  = form.link_to_add '<i class="icon-plus icon-white"></i>'.html_safe, field.name, { :class => 'btn btn-info' }
+  = form.link_to_add "<i class=\"icon-plus icon-white\"></i> #{wording_for(:link, :new, field.associated_model_config.abstract_model)}".html_safe, field.name, { :class => 'btn btn-info' }
   = form.errors_for(field)
   = form.help_for(field)
   %ul.nav.nav-tabs{ :style => 'margin-top:5px' }
