--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -44,21 +44,19 @@ body.rails_admin {
       }
     }
     
-    legend {
-      margin-left: 0px; padding-left: 0px; padding-top: 10px; border-bottom-width: 0px; margin-bottom: 0px;
-      text-align:right;
-      width:140px;
-    }
-    
     /* nested forms */
     .tab-content .tab-pane {
       border-left:5px solid $blue;
       padding-left:5px;
       fieldset {
         margin-left:-10px;
-        .control-group > label, legend {
+        .control-group > label {
           padding-left:10px;
           width:130px;
+        }
+        legend {
+          float:left;
+          margin-left:10px;
         }
       }
     }
@@ -70,9 +68,12 @@ body.rails_admin {
       fieldset {
         margin-left:-20px;
         margin-bottom: -18px;
-        .control-group > label, legend {
+        .control-group > label {
           padding-left:20px;
           width:120px;
+        }
+        legend {
+          margin-left:20px;
         }
       }
     }
@@ -83,9 +84,12 @@ body.rails_admin {
       margin-left:20px;
       fieldset {
         margin-left:-30px;
-        .control-group > label, legend {
+        .control-group > label {
           padding-left:30px;
           width:110px;
+        }
+        legend {
+          margin-left:30px;
         }
       }
     }
@@ -96,9 +100,12 @@ body.rails_admin {
       margin-left:30px;
       fieldset {
         margin-left:-40px;
-        .control-group > label, legend {
+        .control-group > label {
           padding-left:40px;
           width:100px;
+        }
+        legend {
+          margin-left:40px;
         }
       }
     }
