--- a/app/views/rails_admin/main/_submit_buttons.html.haml
+++ b/app/views/rails_admin/main/_submit_buttons.html.haml
@@ -1,6 +1,7 @@
 %input{:type => :hidden, :name => 'return_to', :value => (params[:return_to].presence || request.referer)}
 .form-actions
   %button.btn.btn-primary{:type => "submit", :name => "_save", :'data-disable-with' => t("admin.form.save")}
+    %i.icon-white.icon-ok
     = t("admin.form.save")
   %span.extra_buttons
     - if authorized? :new, @abstract_model
@@ -10,4 +11,5 @@
       %button.btn.btn-info{:type => "submit", :name => "_add_edit", :'data-disable-with' => t("admin.form.save_and_edit")}
         = t("admin.form.save_and_edit")
     %button.btn{:type => "submit", :name => "_continue", :'data-disable-with' => t("admin.form.cancel")}
+      %i.icon-minus
       = t("admin.form.cancel")
