--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -61,10 +61,12 @@
   .form-actions
     %input{:type => :hidden, :name => 'return_to', :value => (params[:return_to].presence || request.referer)}
     %button.btn.btn-primary{:type => "submit", :name => 'csv'}
+      %i.icon-white.icon-ok
       = t("admin.export.confirmation", :name => 'csv')
     %button.btn.btn-info{:type => "submit", :name => 'json'}
       = t("admin.export.confirmation", :name => 'json')
     %button.btn.btn-info{:type => "submit", :name => 'xml'}
       = t("admin.export.confirmation", :name => 'xml')
     %button.btn{:type => "submit", :name => "_continue"}
+      %i.icon-minus
       = t("admin.form.cancel")
