changed RailsAdmin.config(abstract_model) => abstract_model.config clean up active_record adapter including AbstractObject (was specific to ActiveRecord already) refactor of Config::Base to a module Configurable, pruning all the RailsAdmin specific stuff inside refactor of Proxy to a module Proxyable, with everything handled at inclusion time

--- a/lib/generators/rails_admin/templates/initializer.erb
+++ b/lib/generators/rails_admin/templates/initializer.erb
@@ -82,11 +82,11 @@ RailsAdmin.config do |config|
 <% RailsAdmin::AbstractModel.all.map do |abstract_model| -%>
   # config.model <%= abstract_model.model.model_name %> do
   #   # Found associations:
-<%= RailsAdmin.config(abstract_model).export.fields.select{|f| f.association?}.map do |field|
+<%= abstract_model.config.export.fields.select{|f| f.association?}.map do |field|
 %{  #     configure #{field.name.inspect}, #{field.type.inspect}#{"         # Hidden" unless field.visible?} }
 end.join("\n") -%>
   #   # Found columns:
-<%= RailsAdmin.config(abstract_model).export.fields.select{|f| !f.association?}.map do |field|
+<%= abstract_model.config.export.fields.select{|f| !f.association?}.map do |field|
 %{  #     configure #{field.name.inspect}, #{field.type.inspect}#{"         # Hidden" unless field.visible?} }
 end.join("\n") -%>
   #   # Sections:
