--- a/app/assets/stylesheets/rails_admin/jquery.ui.timepicker.css.scss
+++ b/app/assets/stylesheets/rails_admin/jquery.ui.timepicker.css.scss
@@ -1,7 +1,7 @@
 /*
  * Timepicker stylesheet
  * Highly inspired from datepicker
- * FG - Nov 2010 - Web3R
+ * FG - Nov 2010 - Web3R 
  *
  * version 0.0.3 : Fixed some settings, more dynamic
  * version 0.0.4 : Removed width:100% on tables
@@ -38,6 +38,22 @@
     text-align:right;
     text-decoration:none;
 }
+
+
+/* buttons and button pane styling */
+.ui-timepicker .ui-timepicker-buttonpane {
+    background-image: none; margin: .7em 0 0 0; padding:0 .2em; border-left: 0; border-right: 0; border-bottom: 0;
+}
+.ui-timepicker .ui-timepicker-buttonpane button { margin: .5em .2em .4em; cursor: pointer; padding: .2em .6em .3em .6em; width:auto; overflow:visible; }
+/* The close button */
+.ui-timepicker .ui-timepicker-close { float: right }
+
+/* the now button */
+.ui-timepicker .ui-timepicker-now { float: left; }
+
+/* the deselect button */
+.ui-timepicker .ui-timepicker-deselect { float: left; }
+
 
 /* IE6 IFRAME FIX (taken from datepicker 1.5.3 */
 .ui-timepicker-cover {
