icon-minus => icon-remove for cancel buttons fix #1003 Thanks @versilov [ci skip]

--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -71,5 +71,5 @@
     %button.btn.btn-info{:type => "submit", :name => 'xml'}
       = t("admin.export.confirmation", :name => 'xml')
     %button.btn{:type => "submit", :name => "_continue"}
-      %i.icon-minus
+      %i.icon-remove
       = t("admin.form.cancel")
