--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -88,8 +88,8 @@
     %table.table.table-condensed.table-striped
       %thead
         %tr
-          %th.first.shrink
-            %input.checkbox.toggle{:type => "checkbox"}
+          %th.shrink
+            %input.toggle{:type => "checkbox"}
           - if other_left
             %th.other.left.shrink= "..."
           - properties.each do |property|
@@ -104,8 +104,8 @@
       %tbody
         - @objects.each do |object|
           %tr
-            %td.select.action
-              = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
+            %td
+              = check_box_tag "bulk_ids[]", object.id, false
             - if @other_left_link ||= other_left && index_path(params.except('set').merge(params[:set].to_i != 1 ? {:set => (params[:set].to_i - 1)} : {}))
               %td.other.left= link_to "...", @other_left_link, :class => 'pjax'
             - properties.map{ |property| property.bind(:object, object) }.each do |property|
