--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -67,6 +67,10 @@
   %script
     jQuery(function($) {
     = @ordered_filter_string
+    /* Check all checkbox */
+    $('input.checkbox.toggle').click(function () {
+    $('input.checkbox[name|="bulk_ids[]"]').attr('checked', this.checked);
+    });
     });
   %style
     - properties.select{ |p| p.column_width.present? }.each do |property|
