--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -68,6 +68,7 @@
     jQuery(function($) {
     = @ordered_filter_string
     /* Check all checkbox */
+    $('input.checkbox.toggle').tooltip();
     $('input.checkbox.toggle').click(function () {
     $('input.checkbox[name|="bulk_ids[]"]').attr('checked', this.checked);
     });
@@ -93,7 +94,7 @@
       %thead
         %tr
           %th.shrink
-            %input.toggle{:type => "checkbox"}
+            %input.toggle{:type => "checkbox", :title => "#{t('admin.misc.chose_all')}"}
           - if other_left
             %th.other.left.shrink= "..."
           - properties.each do |property|
