add media all to application.html.haml

--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -5,7 +5,7 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %meta{:content => "NONE,NOARCHIVE", :name => "robots"}
     = csrf_meta_tag
-    = stylesheet_link_tag "rails_admin/rails_admin.css"
+    = stylesheet_link_tag "rails_admin/rails_admin.css", :media => :all
     = javascript_include_tag "rails_admin/rails_admin.js"
   %body.rails_admin
     .navbar.navbar-fixed-top
