remove exception for hidden fields, use CSS instead, fix #928

--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -31,6 +31,11 @@ body.rails_admin {
 
   /* new/edit/export forms */
   .form-horizontal {
+    /* hide hidden fields controls by default */
+    .control-group .hidden_type {
+      display:none;
+    }
+    
     legend {
       cursor:pointer;
       i {
