--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -6,7 +6,7 @@
   if form.object.new_record? && related_id.present? && related_id != 'new'
     selected = config.abstract_model.get(related_id)
     selected_id = selected.send(field.associated_primary_key)
-    selected_name = selected.send(field.associated_label_method)
+    selected_name = selected.send(field.associated_object_label_method)
   else
     selected_id = field.selected_id
     selected_name = field.formatted_value
@@ -18,7 +18,7 @@
 
   xhr = !field.associated_collection_cache_all
   
-  collection = xhr ? [[selected_name, selected_id]] : controller.list_entries(config, :index, field.associated_collection_scope, false).map { |o| [o.send(field.associated_label_method), o.send(field.associated_primary_key)] }
+  collection = xhr ? [[selected_name, selected_id]] : controller.list_entries(config, :index, field.associated_collection_scope, false).map { |o| [o.send(field.associated_object_label_method), o.send(field.associated_primary_key)] }
 
 - selected_id = (hdv = field.html_default_value).nil? ? selected_id : hdv
 = form.select field.method_name, collection, { :selected => selected_id, :include_blank => true }, field.html_attributes.reverse_merge({:placeholder => t('admin.misc.search')})
