--- a/app/views/rails_admin/main/_form_nested_many.html.haml
+++ b/app/views/rails_admin/main/_form_nested_many.html.haml
@@ -9,7 +9,7 @@
   %ul.nav.nav-tabs{ :style => 'margin-top:5px' }
 .tab-content
   = form.fields_for field.name do |nested_form|
-    - if field.nested_form[:allow_destroy]
+    - if field.nested_form[:allow_destroy] || nested_form.options[:child_index] == "new_#{field.name}"
       = nested_form.link_to_remove '<span class="btn btn-small btn-danger"><i class="icon-trash icon-white"></i></span>'.html_safe
     = nested_form.generate({:action => :nested, :model_config => field.associated_model_config, :nested_in => field.name })
 
