refactor JS to behavior (inline JS script tags broke when ajax/pjax was used in combination with nested many)

--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -1,5 +1,5 @@
 <%
-  theme = ENV['RAILS_ADMIN_THEME'] || :default
+  theme = ENV['RAILS_ADMIN_THEME'] || :cerulan
 %>
 
 /***  Variables  ***/
@@ -25,6 +25,7 @@
 @import "rails_admin/jquery.ui.timepicker";
 @import "rails_admin/ra.calendar-additions";
 @import "rails_admin/ra.filtering-multiselect";
+@import "rails_admin/jquery.colorpicker";
 
 /***  Bootstrap Theming  ***/
 
