pjax-form wip (iframe-transport fix needed)

--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -3,7 +3,7 @@
 
 = form_tag export_path(params.merge(:all => true)), :method => 'post', :class => 'form-horizontal denser' do
 
-  %input{:name => "send_data", :type => "hidden", :value => "true"}/
+  %input{:name => "send_data", :type => "hidden", :value => "true"}
   %fieldset
     %legend
       %i.icon-chevron-down
