--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -131,7 +131,7 @@
               %td.other.right= link_to "...", @other_right_link, :class => 'pjax'
             %td.last.links
               %ul.inline= menu_for :member, @abstract_model, object, true
-    - unless params[:all]
+    - if @objects.respond_to?(:total_count)
       - total_count = @objects.total_count
       = paginate(@objects, :theme => 'twitter-bootstrap', :remote => true)
       = link_to(t("admin.misc.show_all"), index_path(params.merge(:all => true)), :class => "show-all btn clearfix pjax") unless total_count > 100 || total_count <= @objects.to_a.size
