forgot a , in a hash

--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -12,7 +12,7 @@
     richtext = 'codemirror'
     js_data = {
       :jspath => field.codemirror_location,
-      :options => field.codemirror_config
+      :options => field.codemirror_config,
       :locations => field.codemirror_assets
     }
   else
