was not getting the path for the overall css.

--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -11,7 +11,8 @@
   elsif field.codemirror
     richtext = 'codemirror'
     js_data = {
-      :jspath => field.codemirror_location,
+      :csspath => field.codemirror_css_location,
+      :jspath => field.codemirror_js_location,
       :options => field.codemirror_config,
       :locations => field.codemirror_assets
     }
