fix to correct bootstrap messing up codemirror themeing

--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -61,6 +61,9 @@
 @import "bootstrap/hero-unit";
 @import "bootstrap/utilities";
 
+/*** Codemirror Fix ***/
+@import "rails_admin/bootstrapfix"
+
 /***  RailsAdmin Theming  ***/
 
 @import "rails_admin/base/theming";
