--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -62,7 +62,7 @@
 @import "bootstrap/utilities";
 
 /*** Codemirror Fix ***/
-@import "rails_admin/bootstrapfix"
+@import "rails_admin/bootstrapfix";
 
 /***  RailsAdmin Theming  ***/
 
