--- a/app/views/kaminari/twitter-bootstrap/_prev_page.html.haml
+++ b/app/views/kaminari/twitter-bootstrap/_prev_page.html.haml
@@ -1,4 +1,4 @@
 - if current_page.first?
-  %li.prev.disabled= link_to raw(t 'views.pagination.previous'), '#'
+  %li.prev.disabled= link_to raw(t 'rails_admin.views.pagination.previous'), '#'
 - else
-  %li.prev= link_to raw(t 'views.pagination.previous'), url, :class => (remote ? 'pjax' : '')
+  %li.prev= link_to raw(t 'rails_admin.views.pagination.previous'), url, :class => (remote ? 'pjax' : '')
