--- a/app/views/rails_admin/main/_form_enumeration.html.haml
+++ b/app/views/rails_admin/main/_form_enumeration.html.haml
@@ -1,1 +1,1 @@
-= form.select field.method_name, field.enum, { :include_blank => true }.reverse_merge((hdv = field.html_default_value).nil? ? {} : { :selected => hdv }), field.html_attributes.reverse_merge({ :data => { :enumeration => true }, :placeholder => t('admin.misc.search') })
+= form.select field.method_name, field.enum, { :include_blank => true }.reverse_merge((hdv = field.html_default_value).nil? ? {} : { :selected => hdv }), field.html_attributes.reverse_merge({ :data => { :enumeration => true }, :placeholder => t('rails_admin.admin.misc.search') })
