--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -7,9 +7,9 @@
   %fieldset
     %legend
       %i.icon-chevron-down
-      = t('admin.export.select')
+      = t('rails_admin.admin.export.select')
     .control-group
-      %label.control-label{:rel => 'tooltip', :'data-original-title' => t('admin.export.click_to_reverse_selection'), :onclick => 'jQuery(this).siblings(".controls").find("input").click()'}= t('admin.export.fields_from', :name => @model_config.label_plural.downcase)
+      %label.control-label{:rel => 'tooltip', :'data-original-title' => t('rails_admin.admin.export.click_to_reverse_selection'), :onclick => 'jQuery(this).siblings(".controls").find("input").click()'}= t('rails_admin.admin.export.fields_from', :name => @model_config.label_plural.downcase)
       .controls
         - visible_fields.select{ |f| !f.association? || f.association[:polymorphic] }.each do |field|
           - list = field.virtual? ? 'methods' : 'only'
@@ -29,7 +29,7 @@
     - visible_fields.select{ |f| f.association? && !f.association[:polymorphic] }.each do |field|
       - fields = field.associated_model_config.export.with(:view => self, :object => (associated_model = field.associated_model_config.abstract_model.model).new).visible_fields.select{ |f| !f.association? }
       .control-group
-        %label.control-label{:rel => 'tooltip', :'data-original-title' => t('admin.export.click_to_reverse_selection'), :onclick => 'jQuery(this).siblings(".controls").find("input").click()'}= t('admin.export.fields_from_associated', :name => field.label.downcase)
+        %label.control-label{:rel => 'tooltip', :'data-original-title' => t('rails_admin.admin.export.click_to_reverse_selection'), :onclick => 'jQuery(this).siblings(".controls").find("input").click()'}= t('rails_admin.admin.export.fields_from_associated', :name => field.label.downcase)
         .controls
           - fields.each do |associated_model_field|
             - list = associated_model_field.virtual? ? 'methods' : 'only'
@@ -40,36 +40,36 @@
   %fieldset
     %legend
       %i.icon-chevron-down
-      = t('admin.export.options_for', :name => 'csv')
+      = t('rails_admin.admin.export.options_for', :name => 'csv')
     .control-group
       - guessed_encoding = (Rails.configuration.database_configuration[Rails.env]['encoding'].presence rescue 'UTF-8') || 'UTF-8'
-      %label.control-label{:for => "csv_options_encoding_to"}= t('admin.export.csv.encoding_to')
+      %label.control-label{:for => "csv_options_encoding_to"}= t('rails_admin.admin.export.csv.encoding_to')
       .controls
         -# from http://books.google.com/support/partner/bin/answer.py?answer=30990 :
         = select_tag 'csv_options[encoding_to]', options_for_select(["", "UTF-8", "UTF-16LE", "UTF-16BE", "UTF-32LE", "UTF-32BE", "UTF-7", "ISO-8859-1", "ISO-8859-15", "IBM-850", "MacRoman", "Windows-1252", "ISO-8859-3", "IBM-852", "ISO-8859-2", "MacCE", "Windows-1250", "IBM-855", "ISO-8859-5", "ISO-IR-111", "KOI8-R", "MacCyrillic", "Windows-1251", "CP-866", "KOI-U", "MacUkranian", "GB2312", "GBK", "GB18030", "HZ", "ISO-2022-CN", "Big5", "Big5-HKSCS", "EUC-TW", "EUC-JP", "ISO-2022-JP", "Shift_JIS", "EUC-KR", "UHC", "JOHAB", "ISO-2022-KR"])
-        %p.help-block= t('admin.export.csv.encoding_to_help', :name => guessed_encoding)
+        %p.help-block= t('rails_admin.admin.export.csv.encoding_to_help', :name => guessed_encoding)
 
     .control-group
-      %label.control-label{:for => "csv_options_skip_header"}= t('admin.export.csv.skip_header')
+      %label.control-label{:for => "csv_options_skip_header"}= t('rails_admin.admin.export.csv.skip_header')
       .controls
         = check_box_tag 'csv_options[skip_header]', 'true'
-        %p.help-block= t('admin.export.csv.skip_header_help')
+        %p.help-block= t('rails_admin.admin.export.csv.skip_header_help')
 
     .control-group
-      %label.control-label{:for => "csv_options_generator_col_sep"}= t('admin.export.csv.col_sep')
+      %label.control-label{:for => "csv_options_generator_col_sep"}= t('rails_admin.admin.export.csv.col_sep')
       .controls
-        = select_tag 'csv_options[generator][col_sep]', options_for_select({ '' => t('admin.export.csv.default_col_sep'), "<comma> ','" => ',', "<semicolon> ';'" => ';', '<tabs>' => "'\t'" })
-        %p.help-block= t('admin.export.csv.col_sep_help', :value => t('admin.export.csv.default_col_sep'))
+        = select_tag 'csv_options[generator][col_sep]', options_for_select({ '' => t('rails_admin.admin.export.csv.default_col_sep'), "<comma> ','" => ',', "<semicolon> ';'" => ';', '<tabs>' => "'\t'" })
+        %p.help-block= t('rails_admin.admin.export.csv.col_sep_help', :value => t('rails_admin.admin.export.csv.default_col_sep'))
 
   .form-actions
     %input{:type => :hidden, :name => 'return_to', :value => (params[:return_to].presence || request.referer)}
     %button.btn.btn-primary{:type => "submit", :name => 'csv'}
       %i.icon-white.icon-ok
-      = t("admin.export.confirmation", :name => 'csv')
+      = t("rails_admin.admin.export.confirmation", :name => 'csv')
     %button.btn.btn-info{:type => "submit", :name => 'json'}
-      = t("admin.export.confirmation", :name => 'json')
+      = t("rails_admin.admin.export.confirmation", :name => 'json')
     %button.btn.btn-info{:type => "submit", :name => 'xml'}
-      = t("admin.export.confirmation", :name => 'xml')
+      = t("rails_admin.admin.export.confirmation", :name => 'xml')
     %button.btn{:type => "submit", :name => "_continue"}
       %i.icon-remove
-      = t("admin.form.cancel")
+      = t("rails_admin.admin.form.cancel")
