--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -54,7 +54,7 @@
   - if @filterable_fields.present?
     %li.dropdown{:style => 'float:right'}
       %a.dropdown-toggle{:href => '#', :'data-toggle' => "dropdown"}
-        = t('admin.misc.add_filter')
+        = t('rails_admin.admin.misc.add_filter')
         %b.caret
       %ul.dropdown-menu#filters{:style => 'left:auto; right:0;'}
         - @filterable_fields.each do |field|
@@ -71,7 +71,7 @@
     jQuery(function($) {
     $.filters.options.regional = {
     datePicker: {
-    dateFormat: #{raw I18n.t("admin.misc.filter_date_format", :default => I18n.t("admin.misc.filter_date_format", :locale => :en)).to_json},
+    dateFormat: #{raw I18n.t("rails_admin.admin.misc.filter_date_format", :default => I18n.t("rails_admin.admin.misc.filter_date_format", :locale => :en)).to_json},
     dayNames: #{raw RailsAdmin::Config::Fields::Types::Datetime.day_names.to_json},
     dayNamesShort: #{raw RailsAdmin::Config::Fields::Types::Datetime.abbr_day_names.to_json},
     dayNamesMin: #{raw RailsAdmin::Config::Fields::Types::Datetime.abbr_day_names.to_json},
@@ -80,9 +80,9 @@
     monthNamesShort: #{raw RailsAdmin::Config::Fields::Types::Datetime.abbr_month_names.to_json},
     }
     }
-    
+
     = @ordered_filter_string
-    
+
     });
   %style
     - properties.select{ |p| p.column_width.present? }.each do |property|
@@ -92,10 +92,10 @@
     .well
       %span#filters_box
       %hr.filters_box{:style => "display:#{@ordered_filters.empty? ? 'none' : 'block'}"}
-      %input.input-small{:name => "query", :type => "search", :value => query, :placeholder => t("admin.misc.filter")}
-      %button.btn.btn-primary{:type => "submit", :'data-disable-with' => "<i class='icon-white icon-refresh'></i> ".html_safe + t("admin.misc.refresh")}
+      %input.input-small{:name => "query", :type => "search", :value => query, :placeholder => t("rails_admin.admin.misc.filter")}
+      %button.btn.btn-primary{:type => "submit", :'data-disable-with' => "<i class='icon-white icon-refresh'></i> ".html_safe + t("rails_admin.admin.misc.refresh")}
         %i.icon-white.icon-refresh
-        = t("admin.misc.refresh")
+        = t("rails_admin.admin.misc.refresh")
       - if export_action
         %span{:style => 'float:right'}= link_to wording_for(:link, export_action), export_path(params.except('set').except('page')), :class => 'btn btn-info'
 
@@ -134,7 +134,7 @@
     - if @objects.respond_to?(:total_count)
       - total_count = @objects.total_count.to_i
       = paginate(@objects, :theme => 'twitter-bootstrap', :remote => true)
-      = link_to(t("admin.misc.show_all"), index_path(params.merge(:all => true)), :class => "show-all btn clearfix pjax") unless total_count > 100 || total_count <= @objects.to_a.size
+      = link_to(t("rails_admin.admin.misc.show_all"), index_path(params.merge(:all => true)), :class => "show-all btn clearfix pjax") unless total_count > 100 || total_count <= @objects.to_a.size
       .clearfix.total-count= "#{total_count} #{@model_config.label_plural.downcase}"
     - else
       .clearfix.total-count= "#{@objects.size} #{@model_config.label_plural.downcase}"
