Changing css to fix ie add-remove button issue.

--- a/app/assets/stylesheets/rails_admin/ra.filtering-multiselect.css.scss
+++ b/app/assets/stylesheets/rails_admin/ra.filtering-multiselect.css.scss
@@ -42,7 +42,7 @@
   }
   .ui-icon {
     cursor: pointer;
-    display: inline-block;
+    display: block;
     vertical-align: top;
     &.ui-icon-circle-triangle-e {
       background-position: -16px -32px !important;
