--- a/app/views/rails_admin/main/_form_file_upload.html.haml
+++ b/app/views/rails_admin/main/_form_file_upload.html.haml
@@ -1,9 +1,11 @@
 - file = form.object.send(field.method_name).presence
 
 .toggle{:style => ('display:none;' if file && field.delete_method && form.object.send(field.delete_method) == '1')}
-  - if value = field.pretty_value
-    = value
-  = form.file_field(field.name, field.html_attributes.reverse_merge({ :data => { :fileupload => true } }))
+  .wrap
+    - if value = field.pretty_value
+      = value
+    %img#preview{:src => "#", :width => 100, :height => 100}
+    = form.file_field(field.name, field.html_attributes.reverse_merge({ :data => { :fileupload => true }, :onchange => "generatePreview(this);" }))
 - if field.optional? && field.errors.blank? && file && field.delete_method
   %a.btn.btn-info{:href => '#', :'data-toggle' => 'button', :onclick => "$(this).siblings('[type=checkbox]').click(); $(this).siblings('.toggle').toggle('slow'); jQuery(this).toggleClass('btn-danger btn-info'); return false"}
     %i.icon-white.icon-trash
@@ -11,3 +13,19 @@
   = form.check_box(field.delete_method, :style => 'display:none;' )
 - if field.cache_method
   = form.hidden_field(field.cache_method)
+
+:plain
+  <script type="text/javascript">
+    function generatePreview(input) {
+      if (input.files && input.files[0]) {
+        var reader = new FileReader();
+        var i_id = input.id;
+
+        reader.onload = function (e) {
+            $('#' + i_id).parent().children('#preview').attr('src', e.target.result);
+        }
+
+        reader.readAsDataURL(input.files[0]);
+      }
+    }
+  </script>
