--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -27,6 +27,7 @@
 @import "rails_admin/jquery.ui.timepicker";
 @import "rails_admin/ra.calendar-additions";
 @import "rails_admin/ra.filtering-multiselect";
+@import "rails_admin/ra.widgets";
 @import "rails_admin/jquery.colorpicker";
 
 
