--- a/app/assets/stylesheets/rails_admin/ra.widgets.css.scss
+++ b/app/assets/stylesheets/rails_admin/ra.widgets.css.scss
@@ -2,3 +2,7 @@ iframe.wysihtml5-sandbox{
   height: 250px !important;
   width: 75% !important;
 }
+.controls img.preview{
+  max-height: 100px;
+  max-width: 100px;
+}
