required label styling

--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -32,8 +32,15 @@ body.rails_admin {
   /* new/edit/export forms */
   .form-horizontal {
     /* hide hidden fields controls by default */
-    .control-group .hidden_type {
-      display:none;
+    .control-group{
+      .hidden_type {
+        display:none;
+      }
+      &.required {
+        .control-label {
+          font-weight:bold;
+        }
+      }
     }
 
     legend {
@@ -67,12 +74,6 @@ body.rails_admin {
       .control-group {
         margin: 0px;
         padding-top:15px;
-
-        &.required {
-          .control-label {
-            font-weight:bold;
-          }
-        }
       }
       .control-label {
         width:145px;
