improved wysihtml5 asset handling

--- a/app/assets/javascripts/rails_admin/rails_admin.js.erb
+++ b/app/assets/javascripts/rails_admin/rails_admin.js.erb
@@ -22,6 +22,7 @@
   require_asset 'rails_admin/ui'
   require_asset "rails_admin/themes/#{theme}/ui"
   require_asset 'rails_admin/custom/ui'
+  require_asset 'bootstrap-wysihtml5-all' if Module.const_defined? 'BootstrapWysihtml5Rails'
 %>
 
 
