--- a/app/assets/stylesheets/rails_admin/themes/cerulean/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/themes/cerulean/theming.css.scss
@@ -16,7 +16,7 @@
 // -----------------------------------------------------
 
 .navbar-inner {
-  @include gradient-vertical-three-colors($navbarBackground, $navbarBackground, 90%, $navbarBackgroundHighlight);
+  @include gradient-vertical-three-colors($navbarBackground, $navbarBackground, 0.9, $navbarBackgroundHighlight);
 }
 
 .navbar .nav .active > a,
@@ -55,7 +55,7 @@
 // -----------------------------------------------------
 
 .btn {
-  @include gradient-vertical-three-colors($white, $white, 5%, darken($white, 0%));
+  @include gradient-vertical-three-colors($white, $white, 0.05, darken($white, 0%));
   $shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   @include box-shadow($shadow);
   
