sharper icons for retina screens with font-awesome

--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -20,7 +20,6 @@
 
 /*** Reset ***/
 @import "bootstrap/reset";
-
 /***  Libraries  ***/
 
 @import "rails_admin/aristo/jquery-ui-1.8.7.custom";
@@ -31,6 +30,10 @@
 @import "rails_admin/jquery.colorpicker";
 
 
+/*** Font-awesome ***/
+
+@import 'font-awesome';
+
 /***  Bootstrap Theming  ***/
 
 @import "bootstrap/scaffolding";
@@ -39,7 +42,6 @@
 @import "bootstrap/type";
 @import "bootstrap/forms";
 @import "bootstrap/tables";
-@import "bootstrap/sprites";
 @import "bootstrap/dropdowns";
 @import "bootstrap/wells";
 @import "bootstrap/component-animations";
