Revert "Changed show view to display simple_format instead of <pre>"
This reverts commit dd0167cbce6df9d0709e595bcdb8dc26cae540ff.

--- a/app/views/rails_admin/main/show.html.haml
+++ b/app/views/rails_admin/main/show.html.haml
@@ -11,5 +11,4 @@
             - if !values[index].nil? || !RailsAdmin::config.compact_show_view
               %dt.label{:class => "#{field.type_css_class} #{field.css_class}"}= field.label
               %dd
-                .field_value{:class=>field.css_class}
-                  = simple_format(field.pretty_value)
+                %pre.prettyprint= field.pretty_value
