--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -135,6 +135,6 @@
       - total_count = @objects.total_count.to_i
       = paginate(@objects, :theme => 'twitter-bootstrap', :remote => true)
       = link_to(t("admin.misc.show_all"), index_path(params.merge(:all => true)), :class => "show-all btn clearfix pjax") unless total_count > 100 || total_count <= @objects.to_a.size
-      .clearfix.total-count= "#{total_count} #{@model_config.label_plural.downcase}"
+      .clearfix.total-count= "#{total_count} #{@model_config.pluralize(total_count).downcase}"
     - else
-      .clearfix.total-count= "#{@objects.size} #{@model_config.label_plural.downcase}"
+      .clearfix.total-count= "#{@objects.size} #{@model_config.pluralize(@objects.size).downcase}"
