Beautiful remove button for nested-one form

--- a/app/assets/stylesheets/rails_admin/base/theming.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.scss
@@ -47,7 +47,8 @@ body.rails_admin {
       .controls .nav {
         margin-bottom:5px;
       }
-      .remove_nested_fields {
+      .remove_nested_fields,
+      .remove_nested_one_fields {
         position:absolute;
       }
       margin:0px;
