--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -8,8 +8,8 @@
     %div.control-group
       %div.controls
         %label.checkbox{:for => 'check_all'}
-          = 'Select All Fields'
-          = check_box_tag 'all', 'all', true, { :id => 'check_all' }	
+          = t('admin.export.select_all_fields')
+          = check_box_tag 'all', 'all', true, { :id => 'check_all' }
     %legend
       %i.icon-chevron-down
       = t('admin.export.select')
