making backwards compatible with old version of in?

--- a/app/views/rails_admin/main/_dashboard_history.html.haml
+++ b/app/views/rails_admin/main/_dashboard_history.html.haml
@@ -17,4 +17,4 @@
             %td= label
         - else
           %td= "#{t.table} ##{t.item}"
-        %td= t.message.in?('delete', 'new') ? t("admin.actions.#{t.message}.done").capitalize : t.message
+        %td= t.message.in?(['delete', 'new']) ? t("admin.actions.#{t.message}.done").capitalize : t.message
