--- a/app/views/rails_admin/main/_form_ck_editor.html.haml
+++ b/app/views/rails_admin/main/_form_ck_editor.html.haml
@@ -7,4 +7,4 @@
     }
   }
 
-= form.text_area field.method_name, field.html_attributes.reverse_merge(:data => { :richtext => 'ckeditor', :options => js_data.to_json }).reverse_merge((hdv = field.html_default_value).nil? ? { :value => field.formatted_value } : { :value => hdv })
+= form.text_area field.method_name, field.html_attributes.reverse_merge(:data => { :richtext => 'ckeditor', :options => js_data.to_json }).reverse_merge({ :value => field.form_value })
