--- a/app/views/rails_admin/main/_form_code_mirror.html.haml
+++ b/app/views/rails_admin/main/_form_code_mirror.html.haml
@@ -6,4 +6,4 @@
     :locations => field.assets
   }
 
-= form.text_area field.method_name, field.html_attributes.reverse_merge(:data => { :richtext => 'codemirror', :options => js_data.to_json }).reverse_merge((hdv = field.html_default_value).nil? ? { :value => field.formatted_value } : { :value => hdv })
+= form.text_area field.method_name, field.html_attributes.reverse_merge(:data => { :richtext => 'codemirror', :options => js_data.to_json }).reverse_merge({ :value => field.form_value })
