--- a/app/views/rails_admin/main/_form_wysihtml5.html.haml
+++ b/app/views/rails_admin/main/_form_wysihtml5.html.haml
@@ -5,4 +5,4 @@
     :config_options => field.config_options.to_json
   }
 
-= form.text_area field.method_name, field.html_attributes.reverse_merge(:data => { :richtext => 'bootstrap-wysihtml5', :options => js_data.to_json }).reverse_merge((hdv = field.html_default_value).nil? ? { :value => field.formatted_value } : { :value => hdv })
+= form.text_area field.method_name, field.html_attributes.reverse_merge(:data => { :richtext => 'bootstrap-wysihtml5', :options => js_data.to_json }).reverse_merge({ :value => field.form_value })
