--- a/app/views/rails_admin/main/_form_nested_one.html.haml
+++ b/app/views/rails_admin/main/_form_nested_one.html.haml
@@ -4,9 +4,9 @@
     %a.btn.btn-info.toggler{:'data-toggle' => "button", :'data-target' => "#{form.jquery_namespace(field)} > .tab-content", :class => (field.active? ? 'active' : '') }
       %i.icon-white
     - unless field.nested_form[:update_only] || !field.inline_add
-      = form.link_to_add "<i class=\"icon-plus icon-white\"></i> #{wording_for(:link, :new, field.associated_model_config.abstract_model)}".html_safe,
+      = form.link_to_add "<i class=\"icon-plus icon-white\"></i> #{wording_for(:link, action: :new, abstract_model: field.associated_model_config.abstract_model)}".html_safe,
         field.name,
-        { :class => 'btn btn-info', :'data-add-label' => "<i class=\"icon-plus icon-white\"></i> #{wording_for(:link, :new, field.associated_model_config.abstract_model)}".gsub("\n", "") }
+        { :class => 'btn btn-info', :'data-add-label' => "<i class=\"icon-plus icon-white\"></i> #{wording_for(:link, action: :new, abstract_model: field.associated_model_config.abstract_model)}".gsub("\n", "") }
   = form.errors_for(field)
   = form.help_for(field)
 
